--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -11,10 +11,13 @@
 	top:0;
 	background-color: #fff;
 	width: 100%;
+	height: 90px;
 }
 
 #globalnav,
-#login{
+#login,
+#logout,
+#userinfo{
 	display: inline-block;
 }
 
@@ -22,6 +25,16 @@
 	position: absolute;
 	right: 15px;
 	top: 5px;
+}
+
+#logout,
+#userinfo{
+	float: right;
+	margin: 5px 0 5px 5px;
+}
+
+#logout {
+	margin-right: 15px;
 }
 
 #globalnav li{
@@ -34,17 +47,19 @@
 }
 
 #logo {
+	display: inline-block;
 	width: 305px;
 	height: 55px;
 	background-image: url("../img/layout/logo.svg");
-	margin-left: 5px; 
+	margin-left: 5px;
 }
 
 #subnav{
-	position: fixed;
-	margin: 0;
-	width: 100%;
-	top: 50px;
+
+	margin: 0 auto;
+	display: block;
+	margin-top: -40px;
+	left: 310px;
 	text-align: center;
 }
 
