--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -7,76 +7,124 @@
 @import url(../font/font.css);
 
 #globalheader {
-	position: fixed;
-	top:0;
-	background-color: #fff;
-	width: 100%;
-	height: 90px;
+    position: fixed;
+    top:0;
+    background-color: #fff;
+    width: 100%;
+    height: 90px;  
 }
-
+#topheader{
+    background-color: #222;
+    width: 100%;
+    height: 30px;
+}
 #globalnav,
 #login,
 #logout,
 #userinfo{
-	display: inline-block;
+    display: inline-block;
+}
+#userinfo a{
+    color:#c0c0c0;
+}
+#userinfo a:hover{
+    color:#fff;
+    text-decoration:none; 
 }
 
 #login{
-	position: absolute;
-	right: 15px;
-	top: 5px;
+    position: absolute;
+    right: 15px;
+    top: 5px;
 }
+
+#login a{
+    color:#c0c0c0;
+}
+#login a:hover{
+    color:#fff;
+    text-decoration:none; 
+}
+
 
 #logout,
 #userinfo{
-	float: right;
-	margin: 5px 0 5px 5px;
+    float: right;
+    margin: 5px 0 5px 5px;
 }
 
 #logout {
-	margin-right: 15px;
-}
+    margin-right: 15px;
 
+}
+#logout a{
+    color:#c0c0c0;
+
+}
+#logout a:hover{
+    color:#fff;
+    text-decoration:none; 
+
+}
 #globalnav li{
-	display: inline-block;
-	margin-right: 5px;
+    display: inline-block;
+    margin-right: 5px;     
 }
 
-#globalnav{
-	margin: 5px 0 5px 5px;
+
+#globalnav {
+    margin: 5px 0 5px 5px;    
 }
+#globalnav a{
+    color:#c0c0c0;
+}
+#globalnav a:hover{
+    color:#fff;
+    text-decoration:none; 
+}
+#globalnav .selected{
+    color:#fff;
+    text-decoration:none; 
+}
+
+
 
 #logo {
-	display: inline-block;
-	width: 305px;
-	height: 55px;
-	background-image: url("../img/layout/logo.svg");
-	margin-left: 5px;
+    display: inline-block;
+    width: 305px;
+    height: 55px;
+    background-image: url("../img/layout/logo.svg");
+    margin-left: 5px;
+    margin-top: 10px;
 }
 
 #subnav{
 
-	margin: 0 auto;
-	display: block;
-	margin-top: -40px;
-	left: 310px;
-	text-align: center;
+    margin: 0 auto;
+    display: block;
+    margin-top: -40px;
+    left: 310px;
+    text-align: center;
 }
 
 #subnav li{
-	display: inline-block;
-	margin-right: 5px;
+    display: inline-block;
+    margin-right: 5px;
 }
 
-#content {
-	width: 960px;
-	margin: 120px auto 0;
+#content article {
+    width: 960px;
+    margin: 110px auto 0;
+    padding: 5px;        
 }
+#content{
+    background-color: #fff;
 
+}
 #globalfooter{
-	bottom: 0;
+    bottom: 0;
 }
 
 #globalfooter p {
-	text-align: center;
+    text-align: center;
 }
