--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -11,7 +11,7 @@
     top:0;
     background-color: #fff;
     width: 100%;
-    height: 90px;  
+    height: 90px;
 }
 #topheader{
     background-color: #222;
@@ -105,6 +105,22 @@
     margin-top: -40px;
     left: 310px;
     text-align: center;
+}
+#subnav a{
+    display:block;
+    float:left;   
+    width:100px;
+    color:black;
+    text-decoration:none;
+    text-align:center;
+    padding:5px;
+
+
+}
+#subnav a:hover{
+
+    background-color:#222;
+    color:#fff;
 }
 
 #subnav li{
