resolution de conflits

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -128,3 +128,15 @@
 #globalfooter p {
     text-align: center;
 }
+
+<!--videos-->
+#content.video {
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+#content.video article{
+    display: inline-block;
+    width: 300px; 
+    text-align: center;
+}
