--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -6,6 +6,13 @@
 @import url(grid.css);
 @import url(../font/font.css);
 
+#errormessage {
+	z-index: 100;
+	color: red;
+	font-size: x-large;
+	text-align: center;
+}
+
 #globalheader {
     position: fixed;
     top:0;
