--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1,10 +1,13 @@
-/*
-*   Import des différents outils de style nécessaires
-*/
+/****************************************/
+/*				Imports					*/
+/****************************************/
 
 @import url(normalize.css);
 @import url(grid.css);
 @import url(../font/font.css);
+
+/*				End of imports			*/
+
 
 
 /****************************************/
@@ -76,6 +79,41 @@ h6 {
   font-size: 11.9px;
   line-height: 20px;
 }
+
+/*		End of Typography and CSS Base	*/
+
+
+
+
+/****************************************/
+/*			 Printer layout				*/
+/****************************************/
+
+@media print {
+  * {
+    color: #000 !important;
+    text-shadow: none !important;
+    background: transparent !important;
+    box-shadow: none !important;
+  }
+}
+
+/*			End of Printer layout		*/
+
+
+
+
+/****************************************/
+/*			 	Main Layout				*/
+/****************************************/
+
+@media screen {
+  
+}
+
+/*			End of Main layout			*/ 
+  
+  
 
 
 
