--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -107,7 +107,205 @@ h6 {
 /*			 	Main Layout				*/
 /****************************************/
 
+
+/*Computer screen*/
+
 @media screen {
+  
+/*globalheader*/
+
+#globalheader {
+    position: fixed;
+    top:0;
+    background-color: #ffffff;
+    width: 100%;
+    height: 90px;
+}
+
+#topheader{
+    background-color: #222;
+    width: 100%;
+    height: 30px;
+}
+
+#globalnav,
+#login,
+#logout,
+#userinfo{
+    display: inline-block;
+}
+
+#logout,
+#userinfo{
+    float: right;
+    margin: 5px;
+}
+
+#globalnav li{
+    display: inline-block;
+    margin-right: 5px;     
+}
+
+
+#globalnav {
+    margin: 5px 0 5px 5px;    
+}
+
+#globalnav a{
+    color:#c0c0c0;
+}
+
+#globalnav a:hover{
+    color:#fff;
+    text-decoration:none; 
+}
+
+#globalnav .selected{
+    color:#fff;
+    text-decoration:none; 
+}
+
+#userinfo a{    
+    color:#c0c0c0;
+}
+
+#userinfo a:hover{
+    color:#fff;
+    text-decoration:none; 
+}
+
+#login{    
+    position: absolute;
+    right: 15px;
+    top: 5px;
+}
+
+#login a{   
+    color:#c0c0c0;
+}
+
+#login a:hover{
+    color:#ffffff;
+    text-decoration:none;
+}
+
+#logout {
+    margin-right: 15px;
+}
+
+#logout a{
+    color:#c0c0c0;
+}
+
+#logout a:hover{
+    color:#fff;
+    text-decoration:none; 
+
+}
+
+#logo {
+    display: inline-block;
+    width: 305px;
+    height: 55px;
+    background-image: url("../img/layout/logo.svg");
+    margin-left: 5px;
+    margin-top: 10px;
+}
+
+#subnav{
+    margin: 0 auto;
+    display: block;
+    margin-top: -52px;
+    left: 310px;
+    text-align: center;
+}
+#subnav a{
+    display:block;
+    float:left;   
+    color:#fff;
+    text-decoration:none;
+    text-align:center;
+    padding:5px;
+    background-color:#c0c0c0;
+}
+
+#subnav a:hover{
+    background-color:#222;
+    color:#fff;
+}
+
+#subnav li{
+    display: inline-block;
+    margin:-2px;
+}
+
+/*End of globalheader*/
+
+/*Content*/
+
+#content article {
+    width: 960px;
+    margin: 0px auto;
+    padding: 5px;        
+}
+#content{
+      margin:100px;
+}
+
+#content nav{
+    display:block;
+    float:left;   
+    width: 100%;
+    color:#fff;
+    background-color:#222;
+    text-decoration:none;
+    text-align:center;
+    padding:5px; 
+}
+#content nav li{
+    display:inline-block;
+}
+#content li a {
+    color: #c0c0c0;
+}
+#content li a:hover{
+    color:#fff;
+    text-decoration:none;   
+}
+
+/*End of content*/
+
+
+
+/*globalfooter*/
+
+#globalfooter{
+    bottom:0;
+    position:fixed;
+    background-color: #222;
+    width: 100%;
+    height: 30px;
+}
+
+#globalfooter p {
+    
+    text-align: center;
+    color:#c0c0c0;    
+}
+
+/*End of globalfooter*/
+
+
+/*Diverse*/
+
+#errormessage {
+	z-index: 100;
+	color: red;
+	font-size: x-large;
+	text-align: center;
+}
+
+/*End of diverse*/
   
 }
 
@@ -141,174 +339,5 @@ h6 {
 
 
 
-#errormessage {
-	z-index: 100;
-	color: red;
-	font-size: x-large;
-	text-align: center;
-}
-
-#globalheader {
-    position: fixed;
-    top:0;
-    background-color: #fff;
-    width: 100%;
-    height: 90px;
-}
-#topheader{
-    background-color: #222;
-    width: 100%;
-    height: 30px;
-}
-#globalnav,
-#login,
-#logout,
-#userinfo{
-    display: inline-block;
-}
-#userinfo a{
-    color:#c0c0c0;
-}
-#userinfo a:hover{
-    color:#fff;
-    text-decoration:none; 
-}
-
-#login{
-    position: absolute;
-    right: 15px;
-    top: 5px;
-}
-
-#login a{
-    color:#c0c0c0;
-}
-#login a:hover{
-    color:#fff;
-    text-decoration:none; 
-}
-
-
-#logout,
-#userinfo{
-    float: right;
-    margin: 5px 0 5px 5px;
-}
-
-#logout {
-    margin-right: 15px;
-
-}
-#logout a{
-    color:#c0c0c0;
-
-}
-#logout a:hover{
-    color:#fff;
-    text-decoration:none; 
-
-}
-#globalnav li{
-    display: inline-block;
-    margin-right: 5px;     
-}
-
-
-#globalnav {
-    margin: 5px 0 5px 5px;    
-}
-#globalnav a{
-    color:#c0c0c0;
-}
-#globalnav a:hover{
-    color:#fff;
-    text-decoration:none; 
-}
-#globalnav .selected{
-    color:#fff;
-    text-decoration:none; 
-}
-
-
-#logo {
-    display: inline-block;
-    width: 305px;
-    height: 55px;
-    background-image: url("../img/layout/logo.svg");
-    margin-left: 5px;
-    margin-top: 10px;
-}
-
-#subnav{
-    margin: 0 auto;
-    display: block;
-    margin-top: -52px;
-    left: 310px;
-    text-align: center;
-}
-#subnav a{
-    display:block;
-    float:left;   
-    color:#fff;
-    text-decoration:none;
-    text-align:center;
-    padding:5px;
-    background-color:#c0c0c0;
-
-
-}
-#subnav a:hover{
-
-    background-color:#222;
-    color:#fff;
-}
-
-#subnav li{
-    display: inline-block;
-    margin:-2px;
-}
-
-#content article {
-    width: 960px;
-    margin: 0px auto;
-    padding: 5px;        
-}
-#content{
-    background-color: #fff;
-    margin:100px;
-}
-
-#content nav{
-    display:block;
-    float:left;   
-    width: 100%;
-    color:#fff;
-    background-color:#222;
-    text-decoration:none;
-    text-align:center;
-    padding:5px; 
-}
-#content nav li{
-    display:inline-block;
-}
-#content li a {
-    color: #c0c0c0;
-}
-#content li a:hover{
-    color:#fff;
-    text-decoration:none;   
-}
-#content h1 {
-    
-font-size : 30px
-}
-
-#globalfooter{
-    bottom: 0;
-}
-
-#globalfooter p {
-    text-align: center;
-}
 
 
