--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -127,6 +127,7 @@ h6 {
     background-color: #ffffff;
     width: 100%;
     height: 90px;
+    padding-bottom:12px;
 }
 
 #topheader{
@@ -220,31 +221,35 @@ h6 {
 }
 
 #subnav{
-    margin: 0 auto;
+    position:relative;
     display: block;
-    margin-top: -52px;
-    left: 310px;
-    text-align: center;
-}
-#subnav a{
-    display:block;
-    float:left;   
-    color:#fff;
-    text-decoration:none;
+    margin:0;
+    top:-30px;
     text-align:center;
-    padding:5px;
-    background-color:#c0c0c0;
-}
-
-#subnav a:hover{
-    background-color:#222;
-    color:#fff;
 }
 
 #subnav li{
     display: inline-block;
-    margin:-2px;
+    margin:0 -2px;
+    border-bottom:2px solid black;
 }
+
+#subnav a{
+    font-family:'HelveticaNeueLTStd45Light',helvetica,arial,sans-serif;
+    display:block;   
+    color:#222222;
+    text-decoration:none;
+    text-align:center;
+    padding:5px;
+    padding-bottom:0;
+}
+
+#subnav a:hover{
+    border-bottom:4px solid red;
+
+}
+
+
 
 /*End of globalheader*/
 
@@ -295,6 +300,7 @@ h6 {
 }
 
 #globalfooter p {
+    margin-top:5px;
     font-family: 'HelveticaNeueLTStd56Italic',helvetica,arial,sans-serif;;
     text-align: center;
     color:#c0c0c0;    
