--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -87,6 +87,11 @@ h6 {
   line-height: 20px;
 }
 
+p, img{
+margin:0 10px;
+}
+
+
 /*		End of Typography and CSS Base	*/
 
 
@@ -211,27 +216,37 @@ h6 {
 
 }
 
+#bottomheader{
+    position:absolute;
+    display:inline-block;    
+    left:50%;
+    top:50px;
+}
+
 #logo {
-    display: inline-block;
-    width: 305px;
-    height: 55px;
+    position:fixed;
+    top:30px;
+    left:0px;
+    display:block;
+    width:305px;
+    height:55px;
     background-image: url("../img/layout/logo.svg");
     margin-left: 5px;
     margin-top: 10px;
+    
 }
 
 #subnav{
     position:relative;
-    display: block;
-    margin:0;
-    top:-30px;
-    text-align:center;
+    display:inline-block;    
+    border-bottom:2px solid #000000;
+    left:-50%;
 }
 
 #subnav li{
-    display: inline-block;
-    margin:0 -2px;
-    border-bottom:2px solid black;
+     display:block;
+     float:left;
+     border-bottom:3px solid rgba(255,255,255,0);
 }
 
 #subnav a{
@@ -244,9 +259,12 @@ h6 {
     padding-bottom:0;
 }
 
-#subnav a:hover{
-    border-bottom:4px solid red;
+#subnav li:hover{
+    border-bottom:3px solid red;  
+      
+}
 
+#subnav a:hover{
 }
 
 
