--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -6,14 +6,8 @@
 @import url(grid.css);
 
 /*fonts @font-face kits*/
-@import url(../font/HelveticaNeueThin/helveticaneuethin.css);
-@import url(../font/HelveticaNeueLightRoman/helveticaneuelight.css);
-@import url(../font/HelveticaNeueRoman/helveticaneueroman.css);
-@import url(../font/HelveticaNeueItalic/helveticaneueitalic.css);
-@import url(../font/HelveticaNeueMedium/helveticaneuemedium.css);
-@import url(../font/HelveticaNeueBold/helveticaneueroman.css);
-
-/*				End of imports			*/
+@import url(../font/helveticaNeue/helveticaNeue.css);
+/*End of imports*/
 
 
 
@@ -337,10 +331,63 @@ margin:0 10px;
 }
 
 /*End of diverse*/
-  
+
+/****************************************/
+/*			 single_event    			*/
+/****************************************/
+
+/*header*/
+.event_single header{
+    background-color:#eeeeee;
+}
+.event_title{
+    	font-family:'HelveticaNeueLTStd75Bold',helvetica,arial,sans-serif;
+}
+.event_date{
+        font-family:'HelveticaNeueLTStd45Light',helvetica,arial,sans-serif;
+
 }
 
-/*			End of Main layout			*/ 
+
+/*nav*/
+.event_nav{}
+.event_nav a{}
+
+/*info tab*/
+#infos{}
+
+.event_schedule{}
+.event_schedule_title{}
+.event_schedule_slots{}
+
+.event_programm{}
+.event_programm_title{}
+.event_programm_desc{}
+
+/*details tab*/
+#details{}
+.event_lang{}
+.event_lang_title{}
+.event_lang_desc{}
+
+.event_dresscode{}
+.event_dresscode_title{}
+.event_dresscode_desc{}
+
+/*speaker tab*/
+#speaker{}
+.event_speaker{}
+.event_speaker_title{}
+.event_speaker_listbyslot{}
+
+/*button*/
+.event_single button{}
+
+
+/*End of single_event*/  
+  
+  
+}/*End of Main layout*/ 
   
   
 
