--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -23,13 +23,13 @@ body{
 }
 
 a {
-  color: #0088cc;
+  color: #333333;
   text-decoration: none;
 }
 
 a:hover{
-  color: #005580;
-  text-decoration: underline;
+  color: #aaaaaa;
+  text-decoration:none;
 }
 
 p{
@@ -329,6 +329,38 @@ margin:0 10px;
 /*End of diverse*/
 
 /****************************************/
+/*                event          		*/
+/****************************************/
+
+/*
+
+<article class="event">
+		<a href="?action=event_single&id={$event->getNo()}">
+			<h1>{$event->getMainTopic()}</h1>
+			<p>{$event->getStartingDate()|date_format:"%d %B %Y"}</p>
+			<p>{$event->getDescription()}</p>
+		</a>  <!-- Arrow -->
+</article>
+
+*/
+#content .event{
+    margin:7px auto;
+    padding:20px;
+    background-color:#eeeeee;
+}
+
+.event h1{
+    
+}
+
+.event p{
+    font-size:1.2em;
+}
+
+/*End event*/  
+
+
+/****************************************/
 /*			 single_event    			*/
 /****************************************/
 
@@ -386,7 +418,60 @@ margin:0 10px;
 
 
 /*End of single_event*/  
-  
+
+/*
+<article>
+<h1>Contact</h1>
+        <form id="contact" method="post" action="xx.php">
+
+        <!--name-->
+        <p>
+            <label for="name">Name </label>
+            <input type="text" name="user_name" style="width:200px" />
+        </p>
+
+        <p>
+            <label for="surname">Surname </label>
+            <input type="text" name="user_surname" style="width:200px"/>
+        </p>
+
+        <!--email-->
+        <p>
+            <label for="email">Email </label>
+            <input type="email" name="user_email" style="width:200px" />
+        </p>
+
+        <!--subject-->
+        <p>
+            <label for="object">Object </label>
+            <input type="text" name="user_subject" style="width:200px" />
+        </p>
+
+        <!--message-->
+        <p>
+            <label for="message">Message </label>
+            <textarea type="text" name="user_message" rows="4" cols="26"></textarea>
+        </p>
+
+        <!--submit--> 
+        <p>
+            <input type="submit" name="send" value="Send" />
+        </p>
+        
+        </form>
+        
+        <!--google maps incorporated--> 
+        <div>
+            <a href="https://maps.google.ch/maps?hl=fr&tab=wl">"Picture of Google Maps TedxLausanne location"</a>
+        </div>
+</article>
+*/
+
+/****************************************/
+/*			 contact   			*/
+/****************************************/
+
+/*end of contact*/
   
 }/*End of Main layout*/ 
   
