--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -420,9 +420,10 @@ margin:0 10px;
 /*End of single_event*/  
 
 /*
-<article>
-<h1>Contact</h1>
-        <form id="contact" method="post" action="xx.php">
+<article class="contact">
+<section>
+    <h1>Contact</h1>
+    <form method="post" action="xx.php">
 
         <!--name-->
         <p>
@@ -456,20 +457,34 @@ margin:0 10px;
         <!--submit--> 
         <p>
             <input type="submit" name="send" value="Send" />
-        </p>
-        
+        </p>        
         </form>
-        
-        <!--google maps incorporated--> 
-        <div>
-            <a href="https://maps.google.ch/maps?hl=fr&tab=wl">"Picture of Google Maps TedxLausanne location"</a>
-        </div>
-</article>
+    </section>
+
+     <!--google map--> 
+    <section>
+        <h1>Picture of Google Maps TedxLausanne location</h1>
+        <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=46.519931,6.565885&amp;num=1&amp;t=h&amp;ie=UTF8&amp;z=14&amp;ll=46.520197,6.566262&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?q=46.519931,6.565885&amp;num=1&amp;t=h&amp;ie=UTF8&amp;z=14&amp;ll=46.520197,6.566262&amp;source=embed" style="color:#0000FF;text-align:left">Agrandir le plan</a></small>
+    </section>
+    </article>
 */
 
 /****************************************/
 /*			 contact   			*/
 /****************************************/
+
+
+
+.contact h1{
+    font-size:2em;
+}
+
+.contact section{
+    background-color:red;
+    display:block;
+    position:relative;
+    float:left;
+}
 
 /*end of contact*/
   
