--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1,5 +1,5 @@
 /****************************************/
-/*				Imports					*/
+/*Imports*/
 /****************************************/
 
 @import url(normalize.css);
@@ -10,7 +10,7 @@
 
 
 /****************************************/
-/*		Typography and CSS Base			*/
+/*Typography and CSS Base*/
 /****************************************/
 
 body{
@@ -84,13 +84,13 @@ margin:0 10px;
 }
 
 
-/*		End of Typography and CSS Base	*/
+/*End of Typography and CSS Base*/
 
 
 
 
 /****************************************/
-/*			 Printer layout				*/
+/*Printer layout*/
 /****************************************/
 
 @media print {
@@ -102,13 +102,13 @@ margin:0 10px;
   }
 }
 
-/*			End of Printer layout		*/
+/*End of Printer layout		*/
 
 
 
 
 /****************************************/
-/*			 	Main Layout				*/
+/*Main Layout*/
 /****************************************/
 
 
@@ -257,8 +257,6 @@ margin:0 10px;
 #subnav a:hover{
 }
 
-
-
 /*End of globalheader*/
 
 /*Content*/
@@ -327,149 +325,9 @@ margin:0 10px;
 
 /*End of diverse*/
 
-/****************************************/
-/*                event          		*/
-/****************************************/
-
-/*
-
-<article class="event">
-		<a href="?action=event_single&id={$event->getNo()}">
-			<h1>{$event->getMainTopic()}</h1>
-			<p>{$event->getStartingDate()|date_format:"%d %B %Y"}</p>
-			<p>{$event->getDescription()}</p>
-		</a>  <!-- Arrow -->
-</article>
-
-*/
-#content .event{
-    margin:7px auto;
-    padding:20px;
-    background-color:#eeeeee;
-}
-
-.event h1{
-    
-}
-
-.event p{
-    font-size:1.2em;
-}
-
-/*End event*/  
-
 
 /****************************************/
-/*			 single_event    			*/
-/****************************************/
-
-/*header*/
-.event_single header{
-    display:block;
-    background-color:#eeeeee;
-    width:100%;
-    padding:20px;
-}
-.event_title{
-    font-weight:bold;
-}
-.event_date{
-    font-weight:normal;
-    font-size:2em;
-    margin-left:20px;
-}
-
-.event_nav{
-    position:relative;
-    left:-50%;
-}
-.event_nav a{}
-
-/*info tab*/
-#infos{}
-
-.event_schedule{}
-.event_schedule_title{}
-.event_schedule_slots{}
-
-.event_programm{}
-.event_programm_title{}
-.event_programm_desc{}
-
-/*details tab*/
-#details{}
-.event_lang{}
-.event_lang_title{}
-.event_lang_desc{}
-
-.event_dresscode{}
-.event_dresscode_title{}
-.event_dresscode_desc{}
-
-/*speaker tab*/
-#speaker{}
-.event_speaker{}
-.event_speaker_title{}
-.event_speaker_listbyslot{}
-
-/*button*/
-.event_single button{}
-
-
-/*End of single_event*/  
-
-/*
-<article class="contact">
-<section>
-    <h1>Contact</h1>
-    <form method="post" action="xx.php">
-
-        <!--name-->
-        <p>
-            <label for="name">Name </label>
-            <input type="text" name="user_name" style="width:200px" />
-        </p>
-
-        <p>
-            <label for="surname">Surname </label>
-            <input type="text" name="user_surname" style="width:200px"/>
-        </p>
-
-        <!--email-->
-        <p>
-            <label for="email">Email </label>
-            <input type="email" name="user_email" style="width:200px" />
-        </p>
-
-        <!--subject-->
-        <p>
-            <label for="object">Object </label>
-            <input type="text" name="user_subject" style="width:200px" />
-        </p>
-
-        <!--message-->
-        <p>
-            <label for="message">Message </label>
-            <textarea type="text" name="user_message" rows="4" cols="26"></textarea>
-        </p>
-
-        <!--submit--> 
-        <p>
-            <input type="submit" name="send" value="Send" />
-        </p>        
-        </form>
-    </section>
-
-     <!--google map--> 
-    <section>
-        <h1>Picture of Google Maps TedxLausanne location</h1>
-        <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=46.519931,6.565885&amp;num=1&amp;t=h&amp;ie=UTF8&amp;z=14&amp;ll=46.520197,6.566262&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?q=46.519931,6.565885&amp;num=1&amp;t=h&amp;ie=UTF8&amp;z=14&amp;ll=46.520197,6.566262&amp;source=embed" style="color:#0000FF;text-align:left">Agrandir le plan</a></small>
-    </section>
-    </article>
-*/
-
-/****************************************/
-/*              about                   */
+/*about*/
 /****************************************/
 /*Status = to fill*/
 
@@ -477,25 +335,24 @@ margin:0 10px;
 .about h1{}
 .about p{}
 .about img{}
+
 /*end of about*/
 
+
 /****************************************/
-/*     about_nav is part of subnav      */
+/*about_nav*/
 /****************************************/
 /*Status = done*/
+/*Info: this template is styled by id="subnav"
 /*end of about_nav*/
 
 /****************************************/
-/*             contact           	*/
+/*contact*/
 /****************************************/
 /*Status = to fill*/
 
 .contact{
     background-color:green;
-}
-
-.contact h1{
-    font-size:2em;
 }
 
 .contact section{
@@ -505,14 +362,21 @@ margin:0 10px;
     float:left;
 }
 
+.contact h1{
+    font-size:2em;
+}
+
 .contact form{
 
 }
 
+.contact p{
+    
+}
+
 .contact label{
     width:100px;
-    text-align:right;
-       
+    text-align:right;   
 }
 
 .contact input{
@@ -523,17 +387,260 @@ margin:0 10px;
     width:420px;
     height:600px;
     resize:none;
+}
+
+.contact iframe{
     
 }
 /*end of contact*/
+
+
 /****************************************/
-/*            event         	*/
+/*contact_received*/
 /****************************************/
 /*Status = to fill*/
 
+.contact_received p{}
+
+/*end of contact_received*/
 
 
-/*end of event*/
+/****************************************/
+/*events*/
+/****************************************/
+/*Status = to fill*/
+/*Info: this template is composed of two templates
+        event_single.tpl
+        event_nav.tpl
+
+/*End of events*/ 
+
+
+/****************************************/
+/*event_nav*/
+/****************************************/
+/*Status = to fill*/
+
+/*end of event_nav*/
+
+/****************************************/
+/*event_registration*/
+/****************************************/
+/*Status = to fill*/
+
+/*end of event_registration*/
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+
+
 
 
 
