--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -317,10 +317,17 @@ margin:0 10px;
 /*Diverse*/
 
 #errormessage {
-	z-index: 100;
-	color: red;
-	font-size: x-large;
-	text-align: center;
+        position:fixed;
+        width:100%;
+        height:100%;
+        z-index: 100;
+	background-color: rgba(255,0,0,0.5);
+}
+
+#errormessage p{
+       position:fixed;
+       left:50%;
+       top:50%;      
 }
 
 /*End of diverse*/
