--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -319,12 +319,14 @@ margin:0 10px;
 #errormessage {
         position:fixed;
         width:100%;
-        height:100%;
+        height:50%;
+        height:200px;
         z-index: 100;
-	background-color: rgba(255,0,0,0.5);
+	background-color: rgba(255,0,0,1);
 }
 
 #errormessage p{
+       font-size:3em;
        position:fixed;
        left:50%;
        top:50%;    
