--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -316,21 +316,19 @@ margin:0 10px;
 
 /*Diverse*/
 
-#errormessage {
-        position:fixed;
-        width:100%;
-        height:50%;
-        height:200px;
-        z-index: 100;
-	background-color: rgba(255,0,0,1);
-}
+#errormessage {}
 
 #errormessage p{
+       color:#ffffff;
        font-size:3em;
        position:fixed;
-       left:50%;
-       top:50%;    
-       text-align:center;
+       bottom:30px;
+       right:-10px;
+       max-width:inherit;
+       background-color: rgb(255,0,0);
+       padding:20px; 
+       line-height:40px; 
+
 }
 
 /*End of diverse*/
