--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -84,6 +84,32 @@ margin:0 10px;
 }
 
 
+/*forms*/
+
+form{}
+
+label{
+    width:100px;
+    text-align:right;   
+}
+
+fieldset{}
+
+legend{}
+
+input{
+    width:422px;
+}
+
+textarea{
+    width:420px;
+    height:600px;
+    resize:none;
+}
+
+/*End of forms*/
+
+
 /*End of Typography and CSS Base*/
 
 
@@ -125,6 +151,7 @@ margin:0 10px;
     width: 100%;
     height: 90px;
     padding-bottom:12px;
+    z-index:9999;
 }
 
 #topheader{
@@ -462,11 +489,20 @@ margin:0 10px;
 /*end of event_registration*/
 
 /****************************************/
-/**/
+/*events_single*/
 /****************************************/
 /*Status = to fill*/
 
-/*end of */
+.events_single header{}
+.events_single header h1{}
+.events_single header nav{}
+.events_single header nav a{}
+
+.events_single section{}
+
+
+
+/*end of events_single*/
 
 /****************************************/
 /**/
