--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -630,6 +630,15 @@ textarea{
 
 /*end of */
 
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+
 /****************************************/
 /**/
 /****************************************/
@@ -699,6 +708,155 @@ textarea{
 /*Status = to fill*/
 
 /*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+
+/****************************************/
+/**/
+/****************************************/
+/*Status = to fill*/
+
+/*end of */
+
+
+/****************************************/
+/*partners*/
+/****************************************/
+/*Status = to fill*/
+
+.partners{}
+.partners section{}
+.partners section h1{}
+.partners section p{}
+.partners section section{}
+.partners section section h2{}
+.partners section section article{}
+.partners section section article img{}
+.partners section section article p{}
+.partners section section article p a{}
+
+/*end of partners*/
+
+
+/****************************************/
+/*partners_nav*/
+/****************************************/
+/*Status = to fill*/
+/*Info: this template is styled by id="subnav"*/
+
+/*end of partners_nav*/
 
 
 /****************************************/
